log
Thu 09 May 2024 09:17:12 PM UTC: 
 tests:  1|8
total_score: 0/70
98a44d4
Thu 09 May 2024 09:38:45 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c:51:5: error: expected identifier or ‘(’ before ‘return’
   51 |     return NULL;
      |     ^~~~~~
treemap.c:52:1: error: expected identifier or ‘(’ before ‘}’ token
   52 | }
      | ^
Compilation failed
9d38911
Thu 09 May 2024 09:38:58 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c:51:1: error: expected identifier or ‘(’ before ‘}’ token
   51 | }
      | ^
Compilation failed
02bd1b8
Thu 09 May 2024 09:39:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
931d88e
Thu 09 May 2024 09:39:32 PM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
125195b
Thu 09 May 2024 09:46:41 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:13: error: expected expression before ‘}’ token
   63 |             }
      |             ^
Compilation failed
bf958a8
Thu 09 May 2024 09:55:29 PM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:15: error: unused variable ‘parent’ [-Werror=unused-variable]
   57 |     TreeNode *parent = NULL;
      |               ^~~~~~
treemap.c: At top level:
treemap.c:76:1: error: expected identifier or ‘(’ before ‘}’ token
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d90d276
Thu 09 May 2024 10:03:39 PM UTC: 
 treemap.c | 28 ++++++++++++++++------------
 1 file changed, 16 insertions(+), 12 deletions(-)
 tests:  6|6
total_score: 15/70
de3be05
Thu 09 May 2024 10:10:15 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++----
 1 file changed, 31 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
  133 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4ffafef
Thu 09 May 2024 10:14:24 PM UTC: 
 treemap.c | 25 ++++++-------------------
 1 file changed, 6 insertions(+), 19 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:118:12: error: expected expression before ‘void’
  118 |     return void(*) aux->pair;
      |            ^~~~
treemap.c:120:1: error: control reaches end of non-void function [-Werror=return-type]
  120 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9123d1d
Thu 09 May 2024 10:14:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
93cb52c
Thu 09 May 2024 10:16:25 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:125:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
  125 |     TreeNode *parent = NULL;
      |               ^~~~~~
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c32a845
Thu 09 May 2024 10:17:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:125:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
  125 |     TreeNode *parent = NULL;
      |               ^~~~~~
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
53139c7
Thu 09 May 2024 10:17:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4f36119
Thu 09 May 2024 10:18:50 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
a1cba69
Thu 09 May 2024 10:20:01 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:142:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  142 |     TreeNode *aux = tree->root;
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
a79e697
Thu 09 May 2024 10:20:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
004274f
Thu 09 May 2024 10:21:22 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 30/70
cb619fb
